Revision history for Perl extension XML::LibXSLT.

1.70
     - fixed various bugs
     - documentation updates
     - #48247: Win32 patch kindly provided by KMX@cpan.org
     - sync with latest XML::LibXML ABI and add a compatibility check
     - do not force -lgcrypt and -lgpg-error linker flags
     - fix for attribute nodes returned by user-defined XPath functions
     - address #41542: restore internalDTD subset on the source
       document of a transformation (libxslt unlinks it)

1.68
     - fix compilation problems
     - skip exslt tests if not available
     - added XML::LibXSLT::HAVE_EXSLT() (1/0)

1.67
     - sync the binary internals to those of XML::LibXML 1.67
     - update regression tests for compatibility with up-to-date libxslt

1.66
     - bump requirements to libxslt 1.1.8
     - sync the binary internals to those of XML::LibXML 1.66

1.63
     - fix SIGSEGV regarding freeing nodes created by extension functions
       (reported by Elizabeth Mattijsen)
     - use pkg-config to determine linker flags for libexslt

1.62
     - security callback interface contributed by Shane Corgatelli
     - check libxslt version
     - added XML::LibXML-like API to retrieve libxslt version
     - added output_as_bytes() and output_as_chars()
     - added regression tests for output_as_* to 11utf8.t 
     - output_as_string documentation fixed to match reality
     - make 06entities.t to pass with older libxml2/libxslt
     - POD uses items instead of headings
     - fixed media_type and output_encoding for imported stylesheets [rt.cpan.org #23440]

1.61
     - fixed error reporting: die on fatal errors, warn otherwise
       (in particular, warn rather than die on <xsl:message terminate="no">)

1.60
     - fix a huge memory leak in transform_file (bug #1314)
     - make it clear from the docs that output_string returns bytes (bug #8875)
     - added missing type-casting to fix compile-time warnings (bug #18508)